@@ -21,7 +21,7 @@ class Net::SSLeay::X509_VERIFY_PARAM : pointer {
   # Instance Methods
   native method set_hostflags : void ($flags : int);
   
-  native method set1_host : int ($name : string, $namelen : int = 0);
+  native method set1_host : int ($name : string, $namelen : int = -1);
   
   native method set_flags : int ($flags : long);
   
