@@ -3,6 +3,14 @@
     * Add Net::SSLeay::X509_VERIFY_PARAM#clear_flags method.
     * Add Net::SSLeay::X509_VERIFY_PARAM#get_flags method.
     * Add Net::SSLeay::X509_VERIFY_PARAM#get_hostflags method.
+  [Changes]
+    * Change the default value of $namele in Net::SSLeay::X509_VERIFY_PARAM#set1_host method.
+      [Before]
+      method set1_host : int ($name : string, $namelen : int = 0);
+      
+      [After]
+      method set1_host : int ($name : string, $namelen : int = -1);
+      
 0.022 2024-12-04
   [New Features]
     * Add Net::SSLeay::DH#new method.
